# Sangeetha-Grantha

./: .ai-context-guide.md  .ai-quick-reference.md  .aiderignore  .antigravity.md  .chatgpt-config.md  .claude-context.md  .cursorrules  .dockerignore  .gemini-context.md  .gitignore  .goose-context.md  .mise.toml  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  GOOSE.md  Makefile  README.md  Sangita Grantha – Product Requirements Document.md  build.gradle.kts  compose.yaml  fixed-krithis-for-review.md  flagged-krithis-for-review.md  gemini-cli-bulk-import.md  gradle.properties  handover.md  local.properties  neo4j-graph-evaluation.md  react_admin_web_specifications.md  section-issues-cleanup-findings.md  settings.gradle.kts  start-sangita.sh  tools.yaml
.agent/workflows/: agentic-prompt-optimizer.md  bulk-import-testing.md  commit-guardrails.md  debug-start-application.md  e2e-test-runner.md  generate-commit-prompt.md  pre-commit-validation.md  retrospective-commit-and-push.md  scaffold-service.md  start-application.md  test-troubleshooter.md  verify-db-status.md
.agents/: AGENTS.md
.agents/workflows/: agentic-prompt-optimizer.md  conductor-track-manager.md  generate-commit-prompt.md  pre-commit-validation.md  retrospective-commit-and-push.md  scaffold-service.md  start-application.md
.claude/: launch.json  settings.json
.claude/agents/: carnatic-musicologist.md  kotlin-backend-engineer.md  postgres-engineer.md  python-engineer.md
.claude/commands/: Sangeetha-Krithi-Analyser.md  commit.md  db-reset.md  dev-start.md  new-migration.md  steel-thread.md  test-all.md
.github/: compose.e2e-ci.yml
.github/workflows/: ci.yml  e2e-nightly.yml
application_documentation/: DOCUMENTATION_RETENTION_PLAN.md  GEMINI_KNOWLEDGE.md  README.md  ai-integration-opportunities.md  ai-integration-summary.md  north-star-evaluation.md  north-star-production-readiness-decision.md  north-star-production-readiness-implementation-plan.md  pending_implementation.md  sangeetha-grantha-state-of-nation-july-2026.md  sangeetha-grantha-uplift-tasks.md  tech-stack.md
application_documentation/00-meta/: README.md  (+15 more)
archive/: README.md
conductor/: check-registry-sync.py  handoff-simplify-and-ship.md  index.md  next-phases-recommendations.md  product-guidelines.md  product.md  status-phase3-completion.md  tech-stack.md  tracks.md  ui-refactoring-plan.md  workflow.md
config/: .env.auto-approval.example  .env.development  README.md  README_MCP.md  application.local.toml  mcp-servers.json
database/: track-093-verify.sql
gradle/: libs.versions.toml
openapi/: sangita-grantha.openapi.yaml
tools/: bootstrap  bootstrap.ps1  check-doc-links.py  fix_headers.py  re-extract.sh  test_integration_pipeline.sh
tools/krithi-extract-enrich-worker/: Dockerfile  pyproject.toml
tools/krithi-extract-enrich-worker/scripts/: _common.py  browser_batch_extract.py  import_dikshitar_krithis.py  section_repair.py  section_triage.py  section_triage_batch.py  tamil_trailer_repair.py  template_repair.py
tools/krithi-extract-enrich-worker/src/: browser_batch_extract.py  cli.py  config.py  db.py  diacritic_normalizer.py  extraction_strategies.py  extractor.py  gemini_enricher.py  html_extractor.py  identity_candidates.py  import_dikshitar_krithis.py  metadata_parser.py  normalizer.py  ocr_fallback.py  page_segmenter.py  repair_comprehensive.py  repair_section_text.py  repair_sections.py  schema.py  structure_parser.py  transliterator.py  velthuis_decoder.py  worker.py
tools/krithi-extract-enrich-worker/src/heuristics/: __init__.py  metadata_heuristics.py  transliteration_collapse.py
tools/krithi-extract-enrich-worker/tests/: test_catb_truncation_regression.py  test_cli_delegation.py  test_diacritic_normalizer.py  test_gemini_enricher.py  test_html_extractor.py  test_identity_candidates.py  test_indic_pac_abbreviations.py  test_indic_preamble_strip.py  test_latin_footnote_markers.py  test_metadata_parser.py  test_normalization_pins.py  test_normalizer.py  test_resource_management.py  test_schema.py  test_section_issue_regression.py  test_structure_parser.py  test_tamil_trailer_strip.py  test_worker.py
tools/krithi-extract-enrich-worker/tests/fixtures/: section_issues_reextract.csv
tools/krithi-extract-enrich-worker/tests/fixtures/html/: catb_kamakshi_anudinamu.html  catb_kamakshi_ni_pada.html  catb_rave_hima_giri_kumari.html  indic_charanam_false_positive.html  indic_single_letter_false_positive.html  tv_venkatesa_tamil_trailer.html
tools/krithi-extract-enrich-worker/tests/fixtures/normalization/: pinned_outputs.json
tools/krithi-extract-enrich-worker/tests/fixtures/structure_parser/: dikshitar_multi_variant.expected.json  dikshitar_multi_variant.txt  kotlin_parity_tamil_headers.expected.json  kotlin_parity_tamil_headers.txt  ragamalika_multi_variant.expected.json  ragamalika_multi_variant.txt  syama_sastri_numbered.expected.json  syama_sastri_numbered.txt  tyagaraja_multi_variant.expected.json  tyagaraja_multi_variant.txt  unlabeled_leading_section.expected.json  unlabeled_leading_section.txt
tools/krithi-extract-enrich-worker/tests/integration/: conftest.py  test_w1_queue_contract.py  test_w2_canonical_contract.py  test_w3_gemini_arms_length.py
tools/pdf-extractor/: Dockerfile  pyproject.toml
tools/pdf-extractor/src/: __init__.py  cli.py  config.py  db.py  extractor.py  html_extractor.py  metadata_parser.py  page_segmenter.py  schema.py  structure_parser.py  transliterator.py  velthuis_decoder.py  worker.py
tools/pdf-extractor/tests/: test_diacritic_normalizer.py  test_gemini_enricher.py  test_schema.py  test_structure_parser.py  test_velthuis_decoder.py  test_worker.py
tools/pdf-extractor/tests/fixtures/structure_parser/: kotlin_parity_multiscript.expected.json  kotlin_parity_multiscript.txt
tools/sangita-cli/: .env  Cargo.toml  README.md
tools/sangita-cli/src/: app_config.rs  main.rs  services.rs  utils.rs
tools/sangita-cli/src/commands/: commit.rs  db.rs  dev.rs  docs.rs  extraction.rs  mobile.rs  mod.rs  net.rs  setup.rs  test.rs
tools/sangita-cli/src/database/: connection.rs  manager.rs
(+1034 files in other folders)
