[project]
name = "sangita-pdf-extractor"
version = "1.0.0"
description = "Multi-format document extraction service for Sangeetha Grantha. Extracts Krithi data from PDF, DOCX, and scanned documents into the canonical extraction format."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

dependencies = [
    # PDF extraction
    "pymupdf>=1.24.0",          # PyMuPDF (fitz) — primary PDF text extraction
    "pdfplumber>=0.11.0",       # Tabular PDF extraction fallback

    # OCR
    "pytesseract>=0.3.10",      # Tesseract OCR wrapper

    # Indic text processing
    "indic-transliteration>=2.3.0",  # Script conversion (Devanagari ↔ Tamil/Telugu/etc.)

    # Data validation
    "pydantic>=2.6.0",          # Schema validation for canonical extraction format

    # Database
    "psycopg[binary]>=3.1.0",   # PostgreSQL driver (async-capable)

    # LLM integration
    "google-genai>=1.0.0",         # Unified Gemini SDK (replaces deprecated google-generativeai)
    "rapidfuzz>=3.9.0",            # Fast fuzzy matching for identity candidates

    # HTTP
    "httpx>=0.27.0",            # Async HTTP client for PDF downloads
    "beautifulsoup4>=4.12.0",   # HTML parsing for blogspot/source pages

    # Logging
    "structlog>=24.1.0",        # Structured logging (JSON-formatted for Cloud Logging)

    # CLI
    "click>=8.1.0",             # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    # Integration tests (TRACK-113): real PostgreSQL via testcontainers,
    # migrated by the same Flyway engine as dev/CI (ADR-013)
    "testcontainers>=4.13.0",
    "jsonschema>=4.21.0",       # canonical-extraction-schema.json contract checks
    "respx>=0.22.0",            # HTTP-level stubbing of the Gemini API (httpx)
]

[project.scripts]
pdf-extractor = "src.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
