[project]
name = "sangita-pdf-extractor"
version = "1.0.0"
description = "Multi-format document extraction service for Sangeetha Grantha. Extracts Krithi data from PDF, DOCX, and scanned documents into the canonical extraction format."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}

dependencies = [
    # PDF extraction
    "pymupdf>=1.24.0",          # PyMuPDF (fitz) — primary PDF text extraction
    "pdfplumber>=0.11.0",       # Tabular PDF extraction fallback

    # OCR
    "pytesseract>=0.3.10",      # Tesseract OCR wrapper

    # Indic text processing
    "indic-transliteration>=2.3.0",  # Script conversion (Devanagari ↔ Tamil/Telugu/etc.)

    # Data validation
    "pydantic>=2.6.0",          # Schema validation for canonical extraction format
    "pydantic-settings>=2.2.1", # Environment-based config validation

    # Database
    "psycopg[binary]>=3.1.0",   # PostgreSQL driver (async-capable)

    # LLM integration
    "google-genai>=2.0.0",         # Unified Gemini SDK; 2.0 breaking changes are Interactions-only (TRACK-124)
    "rapidfuzz>=3.9.0",            # Fast fuzzy matching for identity candidates

    # HTTP
    "httpx>=0.27.0",            # Async HTTP client for PDF downloads
    "beautifulsoup4>=4.12.0",   # HTML parsing for blogspot/source pages

    # Logging
    "structlog>=24.1.0",        # Structured logging (JSON-formatted for Cloud Logging)

    # CLI
    "click>=8.1.0",             # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    # Integration tests (TRACK-113): real PostgreSQL via testcontainers,
    # migrated by the same Flyway engine as dev/CI (ADR-013)
    "testcontainers>=4.13.0",
    "jsonschema>=4.21.0",       # canonical-extraction-schema.json contract checks
    "respx>=0.22.0",            # HTTP-level stubbing of the Gemini API (httpx)
    "types-jsonschema>=4.26.0.20260518",
]

[project.scripts]
pdf-extractor = "src.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
# scripts/ and tests/ carry no __init__.py, so without these mypy names their
# modules bare (`section_repair`) and the overrides below never match.
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

# Third-party packages that ship no stubs and no py.typed marker.
[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pytesseract",
    "pytesseract.*",
    "indic_transliteration",
    "indic_transliteration.*",
    "testcontainers",
    "testcontainers.*",
]
ignore_missing_imports = true

# The one-off scripts import each other as siblings via runtime sys.path
# insertion, which mypy cannot follow. Relocating them is TRACK-127; until
# then these bare module names are unresolvable by design.
[[tool.mypy.overrides]]
module = [
    "section_triage",
    "section_repair",
]
ignore_missing_imports = true

# src/ stays fully strict. tests/ and scripts/ relax only what those layers
# genuinely need: test/CLI functions are self-documenting and annotating every
# fixture and argparse helper buys nothing (TRACK-126).
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
# Follows from the above: untyped local helpers stay callable.
disallow_untyped_calls = false
# These layers read psycopg rows and JSON, which are Any by construction.
warn_return_any = false
