[package]
name = "sangita-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
duct = "1.1.1"
console = "0.16.1"
anyhow = "1.0.95"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "blocking", "multipart"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
get_if_addrs = "0.5.3"
toml = "0.8.19"

# Database dependencies (integrated from database/rust)
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "migrate"] }
futures = "0.3.31"
log = "0.4.28"
thiserror = "2.0.16"
config = "0.15.11"
regex = "1.11.1"
urlencoding = "2.1.3"
chrono = "0.4"